collab section spacing fix

--- a/home_page/nila_home_page.css
+++ b/home_page/nila_home_page.css
@@ -845,6 +845,7 @@
   .collab-section-container {
     width: 90%;
     margin: 0 auto;
+    margin-top: 100px;
   }
 
   .collab-section-header-container {
@@ -855,7 +856,7 @@
   .collab-animation-wrapper {
     position: static;
     width: 90vw;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
 
   .collab-header-content {
